correction bug